1. 把主题色改为亮色调

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #1a1a1a; /* 设置背景色为暗色 */
+            background-color: #f4f4f4;
         }
 
         .container {
             width: 80%;
             margin: 20px auto;
             padding: 20px;
-            background-color: #2e2e2e; /* 设置容器背景色为稍亮的暗色 */
+            background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             display: flex;
             flex-wrap: wrap;
@@ -29,7 +29,7 @@
 
         .hot-search-list h2 {
             font-size: 20px;
-            color: #ccc; /* 设置标题颜色为白色 */
+            color: #333;
             margin-bottom: 10px;
         }
 
@@ -47,12 +47,12 @@
 
         a {
             text-decoration: none;
-            color: #4aa1f3; /* 设置链接颜色为蓝色 */
+            color: #007bff;
         }
 
         hr {
             border: none;
-            border-top: 1px solid #555; /* 设置分隔线颜色为稍亮的灰色 */
+            border-top: 1px solid #ccc;
             margin: 10px 0;
         }
 
